--- a/cousera/index.html
+++ b/cousera/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>my cousera</title>
+	<title>my cousera! great course</title>
 </head>
 <body>
-	<h1>my cousera</h1>
+	<h1>my cousera! great course</h1>
 </body>
 </html>
